<resources>
    <string name="app_name">Common-Sense App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="action_register">register</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_news">News</string>
    <string name="title_weather">Weather</string>
    <string name="title_map">Map</string>
    <string name="title_store">Store</string>
    <string name="title_profile">Profile</string>

    <!-- Fragment Strings -->
    <string name="news_fragment">News Fragment</string>
    <string name="weather_fragment">Weather Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="store_fragment">Store Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="text_background_color">Text background color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
