<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_title_paper"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_title_cloud"
        android:title="@string/title_weather" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_title_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_title_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_title_profile"
        android:title="@string/title_profile" />

</menu>
